tests/marouter/errors/format/o/o_time_begin_false/errors.marouter
Error: Broken period definition 'a 1.00' (Invalid Number Format no separator).
Quitting (on error).
